# BumpBitesAI

./: README.md  ai_recipes.py  app.py  database.py  dockerfile  example.env  models.py  pyproject.toml  requirements.txt  setup.py
data/: pregnancy.json
